# nbtpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  compressed.cpp  customNBT.cpp  printNBT.cpp  reexport.cpp
src/: StreamReader.cpp  StreamReader.hpp  StreamWriter.cpp  StreamWriter.hpp  nbtpp.cpp  nbtpp.hpp
